Frontend/front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - image: nginx
          name: frontend
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: chatapp
              mountPath: /etc/nginx/conf.d/
              readOnly: true
      volumes:
        - name: chatapp
          configMap:
            name: chatapp-conf



---

apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: nginx
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: nginx
