Frontend/ingress1.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
spec:
 rules:
 - host: "chatapp-shahnawaz.tk"
   http:
     paths:
     - path: /
       backend:
         serviceName: frontend
         servicePort: 80
